--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,14 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <jdbc.url>jdbc:postgresql://localhost:5432/tinkoff_task</jdbc.url>
+
         <source-files-list>${user.home}/TinkoffTestTask/filesList.txt</source-files-list>
         <index-dir>${user.home}/TinkoffTestTask/Index</index-dir>
+
+        <test.source-files-list>${user.home}/TinkoffTestTask/filesList.txt</test.source-files-list>
+        <test.index-dir>${user.home}/TinkoffTestTask/Index</test.index-dir>
+
+
     </properties>
 
     <dependencies>
@@ -68,11 +73,13 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <includes>
-                    <include>result.xsd</include>
-                </includes>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
 
         <plugins>
             <plugin>
@@ -80,7 +87,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <com.lmm.tinkoff.task.jdbc.url>${jdbc.url}</com.lmm.tinkoff.task.jdbc.url>
                         <com.lmm.tinkoff.task.files_list>${source-files-list}</com.lmm.tinkoff.task.files_list>
                         <com.lmm.tinkoff.task.index_dir>${index-dir}</com.lmm.tinkoff.task.index_dir>
                     </systemPropertyVariables>
@@ -91,9 +97,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <com.lmm.tinkoff.task.jdbc.url>${jdbc.url}</com.lmm.tinkoff.task.jdbc.url>
-                        <com.lmm.tinkoff.task.files_list>${source-files-list}</com.lmm.tinkoff.task.files_list>
-                        <com.lmm.tinkoff.task.index_dir>${index-dir}</com.lmm.tinkoff.task.index_dir>
+                        <com.lmm.tinkoff.task.files_list>${test.source-files-list}</com.lmm.tinkoff.task.files_list>
+                        <com.lmm.tinkoff.task.index_dir>${test.index-dir}</com.lmm.tinkoff.task.index_dir>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
